--- a/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
@@ -66,9 +66,8 @@ so we can bundle the BTF data to precisely match the version of the kernel runni
 
 - [Enable Container threat detection in the managed cluster](#enable-container-threat-detection)
 - [Monitor the Security Events page for malicious programs](#monitor-alerts-page-for-malicious-programs)
-- [Disable detectors](#disable-detectors)
-  - [Disable detector via UI](#disable-detector-via-ui)
-  - [Disable detector via RuntimeSecurity Custom Resource](#disable-detector-via-runtimesecurity-custom-resource)
+- [Update detectors settings](#update-detectors-settings)
+  - [Configure detectors via RuntimeSecurity Custom Resource](#configure-detectors-via-runtimesecurity-custom-resource)
 
 ### Enable Container Threat Detection
 
@@ -95,55 +94,32 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ![malware-alert-example](/img/calico-cloud/malware-alert-example.png)
 
-### Disable detectors
+### Update detectors settings
 
-All detectors are enabled by default. You may want to disable detectors that have a large performance impact and/or produce excessive false positive alerts.
+Threat detection capabilities are provided by detectors that protect against specific [MITRE techniques](https://attack.mitre.org/techniques/enterprise/). 
+Detectors are grouped by [MITRE tactics](https://attack.mitre.org/tactics/enterprise/) they protect against. Additional information for each detector can be found by clicking on a detector. 
+All detectors are enabled by default, with the option of disabling specific detectors if needed.
 
-#### Disable detector via UI
-
-- In Manager UI, go to **Threat defense&nbsp;>&nbsp;Container Threat Detection**.
-
-- Navigate to **Detector Settings** tab.
-
-- Find your desired detector in the list and toggle it to be disabled. To re-enable it use the same toggle.
 ![CTD Detector Settings](/img/calico-cloud/container-threat-detection-detector-settings.png)
 
-#### Disable detector via RuntimeSecurity Custom Resource
-- Get the ID of the desired detector by disabling in the UI as described above.
+#### Configure detectors via RuntimeSecurity Custom Resource
 
-  You should see the ID in the RuntimeSecurity CR (May take a few seconds to appear):
+Detector settings configured through the UI are stored in the cluster's RuntimeSecurity Custom Resource. When configuring multiple clusters, the same configuration can be applied to all clusters.
 
-    ```bash
-    $ kubectl get runtimesecurities default -o yaml
-    ```
+Get the reference `detectorsConfig`:
 
     ```
-    apiVersion: operator.tigera.io/v1
-    kind: RuntimeSecurity
-    ...
-    spec:
-      detectorsConfig:
-      - disabled: true
-        id: persistence-user_modification
+    export detectorConfig="$(kubectl get runtimesecurities.operator.tigera.io default -o jsonpath="{.spec.detectorsConfig}")"
     ```
 
-- Edit the RuntimeSecurity CR:
-
-    To patch entire config:
+Alternatively, can enable Container Threat Detection with the required configuration in one command:
     ```
-    kubectl patch -n tigera-runtime-security runtimesecurities.operator.tigera.io default --type='merge' -p='{"spec":{"detectorsConfig": [{"id": "persistence-user_modification", "disabled": false}]}}'
+    kubectl patch -n tigera-runtime-security runtimesecurities.operator.tigera.io default --type='merge' -p="{\"spec\":{\"detectorsConfig\": $detectorsConfig}}"
     ```
-
-    To patch by index. In this example `0`:
-    ```
-    kubectl patch -n tigera-runtime-security runtimesecurities.operator.tigera.io default --type='json' -p='[{"op": "replace", "path": "/spec/detectorsConfig/0", "value":{"id": "persistence-user_modification", "disabled": false}}]'
-    ```
-
-- (Optionally) Validate your changes by checking the detector settings page in the UI.
 
 :::note
 
-If duplicate detector IDs are present in the RS CR. The last entry will take precedence.
+If duplicate detector IDs are present in the RuntimeSecurity CR. The last entry will take precedence.
 
 :::
 
