--- a/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
@@ -109,10 +109,10 @@ Detector settings configured through the UI are stored in the cluster's RuntimeS
 Get the reference `detectorsConfig`:
 
 ```
-export detectorConfig="$(kubectl get runtimesecurities.operator.tigera.io default -o jsonpath="{.spec.detectorsConfig}")"
+detectorConfig="$(kubectl get runtimesecurities.operator.tigera.io default -o jsonpath="{.spec.detectorsConfig}")"
 ```
 
-Alternatively, can enable Container Threat Detection with the required configuration in one command:
+Container Threat Detection can be enabled with the desired configuration in a single command:
 
 ```
 kubectl patch -n tigera-runtime-security runtimesecurities.operator.tigera.io default --type='merge' -p="{\"spec\":{\"detectorsConfig\": $detectorsConfig}}"
@@ -120,7 +120,7 @@ kubectl patch -n tigera-runtime-security runtimesecurities.operator.tigera.io de
 
 :::note
 
-If duplicate detector IDs are present in the RuntimeSecurity CR. The last entry will take precedence.
+If duplicate detector IDs are present in the RuntimeSecurity CR, the last entry will take precedence.
 
 :::
 
