--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
@@ -17,7 +17,7 @@ Install {{prodname}} to provide both networking and network policy for self-mana
 
 ## Concepts
 
-### {{prodname}} operator _recommended_
+### Recommended: Tigera operator
 
 {{prodname}} is installed by an operator which manages the installation, upgrade, and general lifecycle of a {{prodname}} cluster. The operator is
 installed directly on the cluster as a Deployment, and is configured through one or more custom Kubernetes API resources.
@@ -97,7 +97,7 @@ The option, **Kubernetes API datastore, more than 50 nodes** provides scaling us
 
 :::note
 
-This option is maintained for upgrade compatibility but we recommend that new clusters use the operator, which
+This option is maintained for upgrade compatibility, but we recommend that new clusters use the operator, which
 will automatically configure {{prodname}} correctly for your cluster size (including deploying the Typha scale-out
 proxy and securing it when necessary).
 
@@ -191,16 +191,16 @@ The geeky details of what you get:
 
 :::note
 
-The **etcd** datastore is not recommended for new Kubernetes installs:
+The etcd datastore is not recommended for new Kubernetes installs:
 
 * etcd is another component to manage and maintain.
-* Some newer Kubernetes-targeted features (such as Service matches in policy) are not supported with the etcd datastore.
-* eBPF dataplane mode is not supported with the etcd datastore.  It relies on watching Services to implement some features,
+* Some newer Kubernetes-targeted features (such as service matches in policy) are not supported with the etcd datastore.
+* eBPF dataplane mode is not supported with the etcd datastore.  It relies on watching services to implement some features,
   which is not supported with the etcd datastore.
 * The Cloud/Enterprise versions of {{prodname}} do not support etcd mode at all so using this manifest prevents
-  upgrade to those versions of {{prodname}}.
+  you from upgrading.
 
-However, it is an option if you are running {{prodname}} as the network plugin for both OpenStack and Kubernetes.
+However, it is the only option that supports running both OpenStack and Kubernetes nodes in the same cluster.
 
 :::
 
