--- a/calico_versioned_docs/version-3.26/operations/ebpf/enabling-ebpf.mdx
+++ b/calico_versioned_docs/version-3.26/operations/ebpf/enabling-ebpf.mdx
@@ -55,7 +55,7 @@ eBPF (or "extended Berkeley Packet Filter"), is a technology that allows safe mi
 
 - Other processor architectures.
 
-- etcd datastore driver.  The etcd datastore driver doesn't support watching Kubernetes Services, which is required for some features in eBPF mode.
+- etcd datastore driver.  The etcd datastore driver doesn't support watching Kubernetes services, which is required for some features in eBPF mode.
 
 - Distributions:
 
