--- a/calico_versioned_docs/version-3.28/operations/ebpf/enabling-ebpf.mdx
+++ b/calico_versioned_docs/version-3.28/operations/ebpf/enabling-ebpf.mdx
@@ -63,7 +63,7 @@ To enable IPv6 in eBPF mode, see [Configure dual stack or IPv6 only](../../netwo
 
 - Other processor architectures.
 
-- etcd datastore driver.  The etcd datastore driver doesn't support watching Kubernetes Services, which is required for some features in eBPF mode.
+- etcd datastore driver.  The etcd datastore driver doesn't support watching Kubernetes services, which is required for some features in eBPF mode.
 
 - Distributions:
 
