--- a/calico_versioned_docs/version-3.26/operations/ebpf/install.mdx
+++ b/calico_versioned_docs/version-3.26/operations/ebpf/install.mdx
@@ -54,7 +54,7 @@ and in particular, pushing the networking capabilities of the latest Linux kerne
 
 - Other processor architectures.
 
-- etcd datastore driver.  The etcd datastore driver doesn't support watching Kubernetes Services, which is required for some features in eBPF mode.
+- etcd datastore driver.  The etcd datastore driver doesn't support watching Kubernetes services, which is required for some features in eBPF mode.
 
 - Distributions:
 
