--- a/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
@@ -5,6 +5,12 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## October 1, 2024 (version 20.1.0)
+
+### New features and enhancements
+
+### Bug fixes
+
 ## September 20, 2024 (version 20.0.1)
 
 ### Bug fixes
