--- a/calico-enterprise/reference/resources/bfdconfig.mdx
+++ b/calico-enterprise/reference/resources/bfdconfig.mdx
@@ -6,7 +6,7 @@ import Selectors from '@site/calico-enterprise/_includes/content/_selectors.mdx'
 
 # BFD configuration
 
-A BFD configuration resource (`BFDConfiguration`) represents BFD specific configuration options for a selection of one or more nodes.
+A bidirectional forwarding detection (BFD) configuration resource (`BFDConfiguration`) represents BFD-specific configuration options for a selection of one or more nodes.
 
 For `kubectl` commands, the following case-insensitive aliases may be used to specify the resource type on the CLI: `bfdconfiguration.projectcalico.org`, `bfdconfigurations.projectcalico.org` as well as abbreviations such as `bfdconfiguration.p` and `bfdconfigurations.p`.
 
