Remove unnecessary struct documentation

--- a/calico-cloud/reference/resources/runtimesecurity.mdx
+++ b/calico-cloud/reference/resources/runtimesecurity.mdx
@@ -72,34 +72,16 @@ generation of runtime reports.
 | pod               | The exact name or regex of the pod(s) to which a user wants to negate the generation of runtime logs                   |                 | string  |
 | namespace         | The exact name or regex of the namespace(s) for which a user wants to negate the generation of runtime logs            |                 | string  |
 
-### RuntimeReporterDaemonset
-
-| Field    | Description                                                  | Accepted Values | Schema                      |
-| -------- | ------------------------------------------------------------ |---------------- | --------------------------  |
-| spec     | Spec is the specification of the runtime reporter DaemonSet. |                 | [RuntimeReportDaemonSetSpec](#runtimereporterdaemonsetspec)  |
-
-### RuntimeReportDaemonSetSpec
-
-| Field        | Description                                                                  | Accepted Values | Schema                                   |
-| ------------ | ---------------------------------------------------------------------------- | --------------- | ---------------------------------------- |
-| template     | Template describes the runtime reporter DaemonSet pod that will be created.  |                 | [RuntimeReporterDaemonSetPodTemplateSpec](#runtimereporterdaemonsetpodtemplatespec)  |
-
-### RuntimeReporterDaemonSetPodTemplateSpec
-
-| Field    | Description                                        | Accepted Values | Schema                           |
-| -------- | -------------------------------------------------- | --------------- | -------------------------------- |
-| spec     | Spec is the runtime reporter DaemonSet's PodSpec.  |                 | [RuntimeReporterDaemonSetPodSpec](#runtimereporterdaemonsetpodspec)  |
-
 ### RuntimeReporterDaemonSetPodSpec 
 
 If any of the fields below are specified, they will override the default runtime reporter DaemonSet values for these fields. Otherwise they will use the default values
 
-| Field        | Description                                                                               | Accepted Values | Schema                                                                                                         | Default |
-| --------     | ----------------------------------------------------------------------------------------- | --------------- | -------------------------------------------------------------------------------------------------------------- | ------- |
-| containers   | Containers is a list of runtime reporter DaemonSet containers.                            |                 | [RuntimeReporterDaemonSetContainer](#runtimereporterdaemonsetcontainer)                                        |         |                                      |         |
-| affinity     | Affinity is a group of affinity scheduling rules for the runtime reporter DaemonSet pods. |                 | [corev1.Affinity](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#affinity-v1-core)       |         |
-| nodeSelector | NodeSelector is the runtime reporter pod's scheduling constraints.                        |                 | Map                                                                                                            |         |
-| tolerations  | Tolerations is the runtime reporter pod's tolerations.                                    |                 | [corev1.Tolerations](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#toleration-v1-core)  |         |
+| Field                           | Description                                                                               | Accepted Values | Schema                                                                                                         | Default |
+| ------------------------------- | ----------------------------------------------------------------------------------------- | --------------- | -------------------------------------------------------------------------------------------------------------- | ------- |
+| spec.template.spec.containers   | Containers is a list of runtime reporter DaemonSet containers.                            |                 | [RuntimeReporterDaemonSetContainer](#runtimereporterdaemonsetcontainer)                                        |         |                                      |         |
+| spec.template.spec.affinity     | Affinity is a group of affinity scheduling rules for the runtime reporter DaemonSet pods. |                 | [corev1.Affinity](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#affinity-v1-core)       |         |
+| spec.template.spec.nodeSelector | NodeSelector is the runtime reporter pod's scheduling constraints.                        |                 | Map                                                                                                            |         |
+| spec.template.spec.tolerations  | Tolerations is the runtime reporter pod's tolerations.                                    |                 | [corev1.Tolerations](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#toleration-v1-core)  |         |
 
 ### RuntimeReporterDaemonSetContainer
 
