Add new section to list of sections

--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -64,6 +64,7 @@ so we can bundle the BTF data to precisely match the version of the kernel runni
 
 - [Enable Container threat detection in the managed cluster](#enable-container-threat-detection)
 - [Monitor the Security Events page for malicious programs](#monitor-alerts-page-for-malicious-programs)
+- [Create an exception for suspicious programs](#create-an-exception-for-suspicious-programs)
 
 ### Enable Container Threat Detection
 
@@ -92,7 +93,7 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ### Create an exception for suspicious programs
 
-If you have a program running within the cluster and want to negate the generation of any runtime logs for that process, thus negating an Security Events for that process, then you can add an entry into the RuntimeExceptionList of the Runtime Security resource through the kubectl :
+If you have a program running within the cluster and want to negate the generation of any runtime logs for that process, thus negating any Security Events for that process, then you can add an entry into the RuntimeExceptionList of the Runtime Security resource through kubectl :
 
 ```bash
 kubectl apply -f - <<EOF
@@ -111,9 +112,7 @@ EOF
 ```
 
 The `matching` field can take one of two values, `exact` or `regex`.
-Setting the `matching` field to `regex` lets you pass in a regular expression to capture more than 1 value for each field. Whereas `exact` would require each field to be an exact match.
-
-Supported fields are outlined in the Runtime Security resource
+Setting the `matching` field to `regex` allows you to pass in a regular expression to capture more than 1 value for each field. Whereas `exact` would require each field to be an exact match.
 
 ## Container activity logs in Kibana
 
