--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -29,7 +29,7 @@ to be malicious.
 Our threat detection engine also monitors activity within the containers running in your clusters to detect suspicious behavior and generate corresponding alerts. The threat detection engine monitors the following types of suspicious activity within containers:
 
 - Access to sensitive system files and directories
-- Command and Control
+- Command and control
 - Defense evasion
 - Discovery
 - Execution
@@ -97,14 +97,16 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 ### Update detectors settings
 
 Threat detection capabilities are provided by detectors that protect against specific [MITRE techniques](https://attack.mitre.org/techniques/enterprise/). 
-Detectors are grouped by [MITRE tactics](https://attack.mitre.org/tactics/enterprise/) they protect against. Additional information for each detector can be found by clicking on a detector. 
+Detectors are grouped by the [MITRE tactics](https://attack.mitre.org/tactics/enterprise/) they protect against.
+Additional information for each detector can be found by clicking on a detector.
 All detectors are enabled by default, with the option of disabling specific detectors if needed.
 
 ![CTD Detector Settings](/img/calico-cloud/container-threat-detection-detector-settings.png)
 
 #### Configure detectors via RuntimeSecurity Custom Resource
 
-Detector settings configured through the UI are stored in the cluster's RuntimeSecurity Custom Resource. When configuring multiple clusters, the same configuration can be applied to all clusters.
+Detector settings configured through the UI are stored in the cluster's RuntimeSecurity custom resource.
+When configuring multiple clusters, the same configuration can be applied to all clusters.
 
 Get the reference `detectorsConfig`:
 
