--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -93,7 +93,9 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ### Create an exception for suspicious programs
 
-If you have a program running within the cluster and want to negate the generation of any runtime logs for that process, thus negating any Security Events for that process, then you can add an entry into the RuntimeExceptionList of the Runtime Security resource through kubectl :
+You can turn off Security Events alerts for processes in your cluster that you know to be safe 
+
+ To create an exception, add the process to the Runtime Security resource with kubectl:
 
 ```bash
 kubectl apply -f - <<EOF
