--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -113,7 +113,7 @@ spec:
 EOF
 ```
 
-The `matching` field can take one of two values, `exact` or `regex`.
+The `matching` field can take one of two values: `exact` or `regex`.
 Setting the `matching` field to `regex` allows you to pass in a regular expression to capture more than 1 value for each field. Whereas `exact` would require each field to be an exact match.
 
 ## Container activity logs in Kibana
