--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -114,7 +114,7 @@ EOF
 ```
 
 The `matching` field can take one of two values: `exact` or `regex`.
-Setting the `matching` field to `regex` allows you to pass in a regular expression to capture more than 1 value for each field. Whereas `exact` would require each field to be an exact match.
+Setting the `matching` field to `regex` allows you to pass a regular expression to capture more than one value for each field. Whereas `exact` would require each field to be an exact match.
 
 ## Container activity logs in Kibana
 
