Add label to code block

--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -93,11 +93,11 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ### Create an exception for suspicious programs
 
-You can turn off Security Events alerts for processes in your cluster that you know to be safe 
+You can turn off Security Events alerts for processes in your cluster that you know to be safe
 
- To create an exception, add the process to the Runtime Security resource with kubectl:
+To create an exception, add the process to the Runtime Security resource with kubectl:
 
-```bash
+```bash title="Example RuntimeSecurity CR with exceptions"
 kubectl apply -f - <<EOF
 apiVersion: operator.tigera.io/v1
 kind: RuntimeSecurity
