Change section title

--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -64,7 +64,7 @@ so we can bundle the BTF data to precisely match the version of the kernel runni
 
 - [Enable Container threat detection in the managed cluster](#enable-container-threat-detection)
 - [Monitor the Security Events page for malicious programs](#monitor-alerts-page-for-malicious-programs)
-- [Create an exception for suspicious programs](#create-an-exception-for-suspicious-programs)
+- [Exclude a process from Security Events alerts](#exclude-a-process-from-Security-Events-alerts)
 
 ### Enable Container Threat Detection
 
@@ -91,7 +91,7 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ![malware-alert-example](/img/calico-cloud/malware-alert-example.png)
 
-### Create an exception for suspicious programs
+### Exclude a process from Security Events alerts
 
 You can turn off Security Events alerts for processes in your cluster that you know to be safe
 
