--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -93,7 +93,7 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ### Exclude a process from Security Events alerts
 
-You can turn off Security Events alerts for processes in your cluster that you know to be safe
+You can turn off Security Events alerts for processes in your cluster that you know to be safe.
 
 To create an exception, add the process to the Runtime Security resource with kubectl:
 
