--- a/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
@@ -64,6 +64,7 @@ so we can bundle the BTF data to precisely match the version of the kernel runni
 
 - [Enable Container threat detection in the managed cluster](#enable-container-threat-detection)
 - [Monitor the Security Events page for malicious programs](#monitor-alerts-page-for-malicious-programs)
+- [Exclude a process from Security Events alerts](#exclude-a-process-from-Security-Events-alerts)
 
 ### Enable Container Threat Detection
 
@@ -89,6 +90,31 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 {{prodname}} UI.
 
 ![malware-alert-example](/img/calico-cloud/malware-alert-example.png)
+
+### Exclude a process from Security Events alerts
+
+You can turn off Security Events alerts for processes in your cluster that you know to be safe.
+
+To create an exception, add the process to the Runtime Security resource with kubectl:
+
+```bash title="Example RuntimeSecurity CR with exceptions"
+kubectl apply -f - <<EOF
+apiVersion: operator.tigera.io/v1
+kind: RuntimeSecurity
+metadata:
+  name: default
+spec:
+  runtimeExceptionList:
+    - matching: exact
+      processInvocation: "runc init"
+      namespace: default
+    - matching: regex
+      processInvocation: "\b(shred|rm|mv).*((bash|ash|zsh|fish|fish_read)_history|history)\b"
+EOF
+```
+
+The `matching` field can take one of two values: `exact` or `regex`.
+Setting the `matching` field to `regex` allows you to pass a regular expression to capture more than one value for each field. Whereas `exact` would require each field to be an exact match.
 
 ## Container activity logs in Kibana
 
