--- a/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
@@ -66,8 +66,10 @@ so we can bundle the BTF data to precisely match the version of the kernel runni
 
 - [Enable Container threat detection in the managed cluster](#enable-container-threat-detection)
 - [Monitor the Security Events page for malicious programs](#monitor-alerts-page-for-malicious-programs)
+- [Exclude a process from Security Events alerts](#exclude-a-process-from-Security-Events-alerts)
 - [Update detectors settings](#update-detectors-settings)
   - [Configure detectors via RuntimeSecurity Custom Resource](#configure-detectors-via-runtimesecurity-custom-resource)
+
 
 ### Enable Container Threat Detection
 
@@ -94,9 +96,34 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ![malware-alert-example](/img/calico-cloud/malware-alert-example.png)
 
+### Exclude a process from Security Events alerts
+
+You can turn off Security Events alerts for processes in your cluster that you know to be safe.
+
+To create an exception, add the process to the Runtime Security resource with kubectl:
+
+```bash title="Example RuntimeSecurity CR with exceptions"
+kubectl apply -f - <<EOF
+apiVersion: operator.tigera.io/v1
+kind: RuntimeSecurity
+metadata:
+  name: default
+spec:
+  runtimeExceptionList:
+    - matching: exact
+      processInvocation: "runc init"
+      namespace: default
+    - matching: regex
+      processInvocation: "\b(shred|rm|mv).*((bash|ash|zsh|fish|fish_read)_history|history)\b"
+EOF
+```
+
+The `matching` field can take one of two values: `exact` or `regex`.
+Setting the `matching` field to `regex` allows you to pass a regular expression to capture more than one value for each field. Whereas `exact` would require each field to be an exact match.
+
 ### Update detectors settings
 
-Threat detection capabilities are provided by detectors that protect against specific [MITRE techniques](https://attack.mitre.org/techniques/enterprise/).
+Threat detection capabilities are provided by detectors that protect against specific [MITRE techniques](https://attack.mitre.org/techniques/enterprise/). 
 Detectors are grouped by the [MITRE tactics](https://attack.mitre.org/tactics/enterprise/) they protect against.
 Additional information for each detector can be found by clicking on a detector.
 All detectors are enabled by default, with the option of disabling specific detectors if needed.
