Updates to CC 20.1 RN

--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -96,7 +96,7 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ![malware-alert-example](/img/calico-cloud/malware-alert-example.png)
 
-### Exclude a process from Security Events alerts
+### Exclude a process from Security Events alerts {#exclude-process}
 
 You can turn off Security Events alerts for processes in your cluster that you know to be safe.
 
