--- a/calico-cloud_versioned_docs/version-20-1/image-assurance/understanding-scan-results.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/image-assurance/understanding-scan-results.mdx
@@ -65,7 +65,8 @@ The scanning process also attaches EPSS and known exploit data onto each image a
 
 An EPSS score of 0.1 - or 10% - means a vulnerability has a 10% probability that it will be exploited in the wild within the next 30 days. 
 Users should use this information alongside CVSS scores to prioritize remediating vulnerabilities. For example, you may not have the time to remediate
-all critical or high vulnerabilities, but you can use the EPSS score to help prioritize those critical or high vulnerabilities with an EPSS score of > 90% in order to target those that are most likely to be exploited.
+all critical vulnerabilities, but you can use the EPSS score to help prioritize. By additionally filtering with an EPSS score of > 90% you can target 
+the critical vulnerabilities that are most likely to be exploited.
 
 Note that an EPSS score of > 10% can be considered a high number.
 Information about [The EPSS Model](https://www.first.org/epss/model) can be found on the EPSS website created by [FIRST](https://www.first.org/).
