Fix some mistakes in the docs for CTD

--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -70,7 +70,6 @@ so we can bundle the BTF data to precisely match the version of the kernel runni
 - [Update detectors settings](#update-detectors-settings)
   - [Configure detectors via RuntimeSecurity Custom Resource](#configure-detectors-via-runtimesecurity-custom-resource)
 
-
 ### Enable Container Threat Detection
 
 Container threat detection is disabled by default.
@@ -110,20 +109,20 @@ metadata:
   name: default
 spec:
   runtimeExceptionList:
-    - matching: exact
+    - matching: Exact
       processInvocation: "runc init"
       namespace: default
-    - matching: regex
+    - matching: Regex
       processInvocation: "\b(shred|rm|mv).*((bash|ash|zsh|fish|fish_read)_history|history)\b"
 EOF
 ```
 
-The `matching` field can take one of two values: `exact` or `regex`.
-Setting the `matching` field to `regex` allows you to pass a regular expression to capture more than one value for each field. Whereas `exact` would require each field to be an exact match.
+The `matching` field can take one of two values: `Exact` or `Regex`.
+Setting the `matching` field to `Regex` allows you to pass a regular expression to capture more than one value for each field. Whereas `Exact` would require each field to be an exact match.
 
 ### Update detectors settings
 
-Threat detection capabilities are provided by detectors that protect against specific [MITRE techniques](https://attack.mitre.org/techniques/enterprise/). 
+Threat detection capabilities are provided by detectors that protect against specific [MITRE techniques](https://attack.mitre.org/techniques/enterprise/).
 Detectors are grouped by the [MITRE tactics](https://attack.mitre.org/tactics/enterprise/) they protect against.
 Additional information for each detector can be found by clicking on a detector.
 All detectors are enabled by default, with the option of disabling specific detectors if needed.
