Add network name to endpoint labels
Signed-off-by: tscogin <tscogin@bloomberg.net>

--- a/calico/networking/openstack/labels.mdx
+++ b/calico/networking/openstack/labels.mdx
@@ -41,6 +41,13 @@ recommended for [multiple region deployments](multiple-regions.mdx)) the namespa
 "openstack-region-" followed by the configured region name. Otherwise it is simply
 "openstack".
 
+For the VM's {{prodname}} network name, the label is:
+
+| Label Name                                     | Value                  |
+| ---------------------------------------------- | ---------------------- |
+| `projectcalico.org/openstack-network-name`     | `<network name>`       |
+| ---------------------------------------------- | ---------------------- |
+
 :::note
 
 To allow {{prodname}} to provide the project name and parent ID labels,
