--- a/calico-cloud_versioned_docs/version-20-1/image-assurance/scanners/registry-scanner.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/image-assurance/scanners/registry-scanner.mdx
@@ -120,25 +120,25 @@ To filter out images in the dev "sub" registry:
 Example: gcr registry with Docker credentials
 
 <CodeBlock language='bash'>
-docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://\<>-management.dev.calicocloud.io/bast -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e DOCKER_USERNAME=\<> -e DOCKER_PASSWORD=\<> quay.io/tigera/image-assurance-registry-scanner:{variables.imageassuranceversion}
+docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://<clustId>-management.dev.calicocloud.io/bast -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e DOCKER_USERNAME=<username> -e DOCKER_PASSWORD=<password> quay.io/tigera/image-assurance-registry-scanner:{variables.imageassuranceversion}
 </CodeBlock>
 
 Example: acr registry with Azure credentials
 
 <CodeBlock language='bash'>
-docker run -e REGISTRY=your-org.azurecr.io -e IMAGE_ASSURANCE_API_URL=https://\<>-management.dev.calicocloud.io/bast -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e AZURE_CLIENT_ID=\<> -e AZURE_CLIENT_SECRET=\<> -e AZURE_TENANT_ID=\<> quay.io/tigera/image-assurance-registry-scanner:{variables.imageassuranceversion}
+docker run -e REGISTRY=your-org.azurecr.io -e IMAGE_ASSURANCE_API_URL=https://<clustId>-management.dev.calicocloud.io/bast -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e AZURE_CLIENT_ID=<azure-client-id> -e AZURE_CLIENT_SECRET=<azure-client-secret> -e AZURE_TENANT_ID=<azure-tenant-id> quay.io/tigera/image-assurance-registry-scanner:{variables.imageassuranceversion}
 </CodeBlock>
 
 Example: ecr registry with AWS credentials
 
 <CodeBlock language='bash'>
-docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://\<>-management.dev.calicocloud.io/bast -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e AWS_ACCESS_KEY_ID=\<> -e AWS_SECRET_ACCESS_KEY=\<> -e AWS_REGION=\<>  quay.io/tigera/image-assurance-registry-scanner:{variables.imageassuranceversion}
+docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://<clustId>-management.dev.calicocloud.io/bast -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e AWS_ACCESS_KEY_ID=<aws-access-key> -e AWS_SECRET_ACCESS_KEY=<aws-secret-access-key> -e AWS_REGION=<aws-region>  quay.io/tigera/image-assurance-registry-scanner:{variables.imageassuranceversion}
 </CodeBlock>
 
 Example: run when mounting the dockerfile
 
 <CodeBlock language='bash'>
-docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://\<>-management.dev.calicocloud.io/bast -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -v ~/.docker/config.json/:/.docker/config.json quay.io/tigera/image-assurance-registry-scanner:{variables.imageassuranceversion}
+docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://<clustId>-management.dev.calicocloud.io/bast -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -v ~/.docker/config.json/:/.docker/config.json quay.io/tigera/image-assurance-registry-scanner:{variables.imageassuranceversion}
 </CodeBlock>
 
 ### Troubleshoot
