--- a/calico-enterprise_versioned_docs/version-3.18-2/_includes/content/_non-cluster-binary-install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/_includes/content/_non-cluster-binary-install.mdx
@@ -94,7 +94,7 @@ Or, for upstart:
 
 <CodeBlock language='bash'>
 description "Felix (Calico agent)"
-author "Project Calico Maintainers \<maintainers\.org>"
+author "Project Calico Maintainers <maintainers@projectcalico.org>"
 
 start on stopped rc RUNLEVEL=[2345]
 stop on runlevel [!2345]
