add_literal_syntax_single_line

--- a/calico_versioned_docs/version-3.26/operations/calicoctl/install.mdx
+++ b/calico_versioned_docs/version-3.26/operations/calicoctl/install.mdx
@@ -101,7 +101,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>curl -L \{url}/calicoctl-linux-amd64 -o calicoctl</CodeBlock>
+   <CodeBlock>{`curl -L \{url}/calicoctl-linux-amd64 -o calicoctl`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -132,7 +132,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>curl -L \{url}/calicoctl-darwin-amd64 -o calicoctl</CodeBlock>
+   <CodeBlock>{`curl -L \{url}/calicoctl-darwin-amd64 -o calicoctl`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -167,7 +167,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
    :::
 
-<CodeBlock>Invoke-WebRequest -Uri "\{url}/calicoctl-windows-amd64.exe" -OutFile "calicoctl.exe" </CodeBlock>
+<CodeBlock>{`Invoke-WebRequest -Uri "\{url}/calicoctl-windows-amd64.exe" -OutFile "calicoctl.exe" `}</CodeBlock>
 
 </TabItem>
 <TabItem label="Linux PPC64le" value="Linux PPC64le-3">
@@ -184,7 +184,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>curl -L \{url}/calicoctl-linux-ppc64le -o calicoctl</CodeBlock>
+   <CodeBlock>{`curl -L \{url}/calicoctl-linux-ppc64le -o calicoctl`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -215,7 +215,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>curl -L \{url}/calicoctl-linux-arm64 -o calicoctl</CodeBlock>
+   <CodeBlock>{`curl -L \{url}/calicoctl-linux-arm64 -o calicoctl`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -251,7 +251,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>curl -L \{url}/calicoctl-linux-amd64 -o kubectl-calico</CodeBlock>
+   <CodeBlock>{`curl -L \{url}/calicoctl-linux-amd64 -o kubectl-calico`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -282,7 +282,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>curl -L \{url}/calicoctl-darwin-amd64 -o kubectl-calico</CodeBlock>
+   <CodeBlock>{`curl -L \{url}/calicoctl-darwin-amd64 -o kubectl-calico`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -313,7 +313,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
    :::
 
-<CodeBlock>Invoke-WebRequest -Uri "\{url}/calicoctl-windows-amd64.exe" -OutFile kubectl-calico.exe</CodeBlock>
+<CodeBlock>{`Invoke-WebRequest -Uri "\{url}/calicoctl-windows-amd64.exe" -OutFile kubectl-calico.exe`}</CodeBlock>
 
 </TabItem>
 <TabItem label="Linux PPC64le" value="Linux PPC64le-8">
@@ -330,7 +330,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>curl -L \{url}/calicoctl-linux-ppc64le -o kubectl-calico</CodeBlock>
+   <CodeBlock>{`curl -L \{url}/calicoctl-linux-ppc64le -o kubectl-calico`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -361,7 +361,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>curl -L \{url}/calicoctl-linux-arm64 -o kubectl-calico</CodeBlock>
+   <CodeBlock>{`curl -L \{url}/calicoctl-linux-arm64 -o kubectl-calico`}</CodeBlock>
 
 1. Set the file to be executable.
 
